Validation des pubs et users