@@ -2,6 +2,7 @@ package com.acadlink.config;
 
 import com.acadlink.security.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -19,6 +20,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -29,6 +31,11 @@ public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
+    // CORRECTION : origines CORS configurables via application.properties
+    // app.cors.allowed-origins=http://localhost:8080,http://192.168.11.203:8081
+    @Value("${app.cors.allowed-origins:http://localhost:8080,http://localhost:3000}")
+    private String allowedOriginsRaw;
+
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
@@ -37,7 +44,16 @@ public class SecurityConfig {
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
                 .requestMatchers("/api/auth/**").permitAll()
+                // Fichiers uploadés accessibles publiquement
+                .requestMatchers("/uploads/**").permitAll()
+                // Publications : lecture publique
                 .requestMatchers(HttpMethod.GET, "/api/publications/**").permitAll()
+                // Projets et recherches : lecture publique
+                .requestMatchers(HttpMethod.GET, "/api/projets/**").hasRole("ETUDIANT")
+                .requestMatchers(HttpMethod.GET, "/api/recherches/**").hasAnyRole("ENSEIGNANT", "CHERCHEUR")
+                // Profils : lecture publique
+                .requestMatchers(HttpMethod.GET, "/api/utilisateurs/**").permitAll()
+                // Admin
                 .requestMatchers("/api/admin/**").hasRole("ADMIN")
                 .anyRequest().authenticated()
             )
@@ -59,12 +75,17 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:8080", "http://192.168.11.203:8081"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH"));
+        // CORRECTION : liste d'origines depuis la config, pas hardcodée
+        List<String> origins = Arrays.asList(allowedOriginsRaw.split(","));
+        config.setAllowedOrigins(List.of("http://localhost:8082", "http://192.168.11.203:8081"));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
     }
+    
+    
+    
 }
